--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ crates/rustls
 crates/tokio-rustls
 
 test_files
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
