--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,6 @@
 [package]
-name = "localsend"
+name = "localsend-rust"
 version = "0.1.0"
-authors = ["Krithic Kumar krithickumarub@protonmail.com"]
-edition = "2021"
-license = "GPL-3.0"
-readme = "README.md"
-keywords = ["filesharing"]
-categories = ["command-line-utilities"]
-description = "a CLI for localsend"
-repository = "https://github.com/notjedi/localsend-rs"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2024"
 
 [dependencies]
-tracing = "0.1"
-tracing-log = "0.2"
-console-subscriber = "0.2"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tokio = { version = "1.27", features = ["rt-multi-thread", "signal"] }
-
-console = "0.15"
-indicatif = "0.17"
-dialoguer = "0.11"
-
-localsend-core = { path = "crates/localsend-core", package = "localsend-core" }
-
-[workspace]
-members = ["crates/localsend-core", "crates/axum-server", "crates/rustls"]
-
-[profile.release]
-strip = "symbols"
